[package]
description = "Low-Level Rust bindings around the StereoKitC library for XR"
edition = "2021"
homepage = "https://stereokit.net/"
keywords = ["stereokit", "XR", "VR", "AR", "sys"]
license = "MIT"
links = "StereoKitC"
name = "stereokit-sys"
repository = "https://github.com/MalekiRe/stereokit-sys"
version = "2.3.0"

include = [
  "Cargo.toml",
  "build.rs",
  "src/*",
  "StereoKit/cmake",
  "StereoKit/StereoKitC",
  "StereoKit/CMakeLists.txt",
  "StereoKit/Tools/include",
  "StereoKit/Tools/skshaderc",
  "StereoKit/Tools/skshaderc.exe",
  "README.md",
]
readme = "README.md"

[features]
default = []
linux-egl = []

[dependencies]
mint = "0.5.9"

[dependencies.prisma]
version = "0.1.1"
optional = true

[dependencies.palette]
version = "0.6.1"
default-features = false
optional = true
features = ["std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.63.0"
cmake = "0.1.49"

